# gktrader

./: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SOURCE_INGESTION_FIX_HANDOFF.md  alembic.ini  compose.dev.yaml  compose.yaml  gkt-restart.sh  gkt-stail.sh  gkt-start.sh  gkt-stop.sh  opencode.json  pyproject.toml
.opencode/agents/: implementation-orchestrator.md  implementation-validator.md  implementation-worker-complex.md  implementation-worker.md
docs/: BUGS_FOUND.md  BUGS_FOUND_ROUND2.md
docs/decisions/: adr-001-openclaw-telegram-split.md  adr-002-market-data-downgrade-policy.md
docs/operations/: DEPLOYMENT_MANUAL_STEPS.md  commerce-georg-laptop-gkfetch.md  openclaw-gktrader-runbook.md  openclaw-gktrader-setup.md
docs/sources/: commerce.md  nist.md  sec.md  truthsocial.md  whitehouse.md
integrations/openclaw-gktrader/: README.md  package-lock.json  package.json  tsconfig.json
integrations/openclaw-gktrader/src/: client.ts  index.ts  plugin-sdk.ts  schemas.ts
integrations/openclaw-gktrader/tests/: client.test.ts  tools.test.ts
migrations/: env.py
migrations/versions/: 0001_initial.py
ops/systemd/: gktrader-opencode-web.service  install-opencode-user-services.sh  opencode-web.service  start-gktrader-opencode-web.sh
src/gktrader/: __init__.py
tests/integration/: test_boot.py
tests/unit/: test_celery_app.py  test_contracts.py  test_positions.py  test_tasks.py
ui-design/: dashboard.html
ui-design/components/: alert-card.html  alert-detail.html  badges.html  performance.html  pipeline.html  positions.html
(+107 files in other folders)
