[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "gktrader"
version = "0.1.0"
description = "Auditable event-signal system for public policy catalysts"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
  {name = "OpenClaw"}
]
dependencies = [
  "alembic>=1.16.0",
  "beautifulsoup4>=4.12.3",
  "celery[redis]>=5.4.0",
  "exchange-calendars>=4.5.5",
  "fastapi>=0.115.0",
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "orjson>=3.10.15",
  "playwright>=1.53.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dateutil>=2.9.0.post0",
  "python-slugify>=8.0.4",
  "redis>=6.2.0",
  "rapidfuzz>=3.13.0",
  "sqlalchemy>=2.0.41",
  "structlog>=25.4.0",
  "tenacity>=9.1.2",
  "trafilatura>=2.0.0",
  "uvicorn>=0.35.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0",
  "fakeredis>=2.31.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "respx>=0.22.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/gktrader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.coverage.run]
source = ["gktrader"]
